--- a/storage/templates/storage/redesign/storage_blocks/avia_box.html
+++ b/storage/templates/storage/redesign/storage_blocks/avia_box.html
@@ -14,43 +14,43 @@
 
     <!-- Табы -->
     <div class="box__tabs ct__top-tabs">
-<!--        <button class="ct__top-tab ct__top-tab1 active ct__mid-btn">-->
-<!--            <svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">-->
-<!--                <mask id="mask0_259_317" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144"-->
-<!--                    height="30">-->
-<!--                    <path class="geometry1" d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z" />-->
-<!--                </mask>-->
-<!--                <g mask="url(#mask0_259_317)">-->
-<!--                    <path class="geometry2" d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z" />-->
-<!--                    <path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z"-->
-<!--                        fill="var(&#45;&#45;c10one)" />-->
-<!--                    <path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z"-->
-<!--                        fill="var(&#45;&#45;c10one)" />-->
-<!--                    <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z"-->
-<!--                        fill="var(&#45;&#45;c10one)" />-->
-<!--                </g>-->
-<!--            </svg>-->
-<!--            <span>мои кейсы</span>-->
-<!--        </button>-->
+        <button class="ct__top-tab ct__top-tab1 active ct__mid-btn">
+            <svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">
+                <mask id="mask0_259_317" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144"
+                    height="30">
+                    <path class="geometry1" d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z" />
+                </mask>
+                <g mask="url(#mask0_259_317)">
+                    <path class="geometry2" d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z" />
+                    <path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z"
+                        fill="var(--c10one)" />
+                    <path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z"
+                        fill="var(--c10one)" />
+                    <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z"
+                        fill="var(--c10one)" />
+                </g>
+            </svg>
+            <span>мои кейсы</span>
+        </button>
 
-<!--        <button class="ct__top-tab ct__top-tab2 ct__mid-btn">-->
-<!--            <svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">-->
-<!--                <mask id="mask0_259_318" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144"-->
-<!--                    height="30">-->
-<!--                    <path class="geometry1" d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z" />-->
-<!--                </mask>-->
-<!--                <g mask="url(#mask0_259_318)">-->
-<!--                    <path class="geometry2" d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z" />-->
-<!--                    <path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z"-->
-<!--                        fill="var(&#45;&#45;c10one)" />-->
-<!--                    <path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z"-->
-<!--                        fill="var(&#45;&#45;c10one)" />-->
-<!--                    <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z"-->
-<!--                        fill="var(&#45;&#45;c10one)" />-->
-<!--                </g>-->
-<!--            </svg>-->
-<!--            <span>приобрести</span>-->
-<!--        </button>-->
+        <button class="ct__top-tab ct__top-tab2 ct__mid-btn">
+            <svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">
+                <mask id="mask0_259_318" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144"
+                    height="30">
+                    <path class="geometry1" d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z" />
+                </mask>
+                <g mask="url(#mask0_259_318)">
+                    <path class="geometry2" d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z" />
+                    <path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z"
+                        fill="var(--c10one)" />
+                    <path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z"
+                        fill="var(--c10one)" />
+                    <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z"
+                        fill="var(--c10one)" />
+                </g>
+            </svg>
+            <span>приобрести</span>
+        </button>
     </div>
 
     <!-- Блок "Мои сундуки" -->
@@ -219,10 +219,11 @@
 
 
     <!-- Блок "Приобрести" -->
-<!--    <div class="box__block">-->
-<!--        <p class="box__desc">-->
+    <div class="box__block">
+        <p class="box__desc">
 <!--            Приобретите наборы Аэрокейсов с приятной выгодой!-->
-<!--        </p>-->
+            Продажа Аэрокейсов временно приостановлена. Следите за новостями!
+        </p>
 
 <!--        <ul class="box__buyList">-->
 <!--            <li class="box__buyItem">-->
@@ -359,7 +360,7 @@
 <!--                </div>-->
 <!--            </li>-->
 <!--        </ul>-->
-<!--    </div>-->
+    </div>
     <!-- КОНЕЦ: Блок "Приобрести" -->
 
 
