--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -7553,10 +7553,20 @@ p.overview__love-stat-timer {
 	background-image: linear-gradient(to right, var(--c60), var(--c30));
 }
 
+.map__info--fly {
+	gap: 3rem;
+	justify-content: space-between;
+}
+
 .map__info > img {
 	display: block;
 	width: 50rem;
 	height: 50rem;
+}
+
+.map__info--fly > img:last-of-type {
+	width: 60rem;
+	height: 60rem;
 }
 
 .map__info-mid {
@@ -7564,6 +7574,25 @@ p.overview__love-stat-timer {
 	flex-direction: column;
 	flex-wrap: wrap;
 	padding: 0px 11rem;
+}
+
+.map__info-mid-text {
+	display: flex;
+	flex-direction: column;
+	gap: 4rem;
+}
+.map__info-mid-text img {
+	display: inline-block;
+	width: 20rem;
+	height: 20rem;
+	margin-top: -4rem;
+	margin-bottom: -4rem;
+}
+.map__info-mid-text p {
+	margin: 0;
+	font-size: 12rem;
+	line-height: 1;
+	text-align: center;
 }
 
 .map__info-mid h2 {
