--- a/player/templates/player/redesign/menu.html
+++ b/player/templates/player/redesign/menu.html
@@ -199,7 +199,7 @@
 					</svg>
 				</a>
 
-				<a class="nav__item-link" href="https://t.me/+u58AhNA9bhplOTQy" target="_blank" rel="noopener noreferrer">
+				<a class="nav__item-link" href="https://t.me/+SaBEs4E_RVhhMDky" target="_blank" rel="noopener noreferrer">
 					<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
 					  <path
 						 d="m 5.3999,2.39999 c -1.64971,0 -3,1.35029 -3,3 V 24.6 c 0,1.6497 1.35029,3 3,3 h 19.2 c 1.6497,0 3,-1.3503 3,-3 V 5.39999 c 0,-1.64971 -1.3503,-3 -3,-3 z m 0,1.2 h 19.2 c 1.0011,0 1.8,0.79891 1.8,1.8 V 24.6 c 0,1.0011 -0.7989,1.8 -1.8,1.8 h -19.2 c -1.00109,0 -1.8,-0.7989 -1.8,-1.8 V 5.39999 c 0,-1.00109 0.79891,-1.8 1.8,-1.8 z"
