дополнительный воркер селери

--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -4762,6 +4762,7 @@ p.overview__love-stat-timer {
 	.war__revoBlock {
 		margin: 0 auto;
 		margin-bottom: 12rem;
+		margin-right: 48rem;
 	}
 	.war {
 		margin-top: 100rem;
