--- a/player/templates/player/redesign/header.html
+++ b/player/templates/player/redesign/header.html
@@ -59,6 +59,7 @@
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/95467903" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
+	<script src="/static/redesign/js/client.min.js"></script> <!-- fprint -->
 </head>
 <body>
 
