--- a/player/templates/player/redesign/view_profile.html
+++ b/player/templates/player/redesign/view_profile.html
@@ -25,60 +25,114 @@
 		</h1>
 		<!-- конец НИКНЕЙМА -->
 
-		<div class="profile__top-wrapper" style="height: 200rem;">
+		<div class="profile__mainFlex">
+				<div class="profile__top-wrapper profile__top-wrapper--pc">
 
-			<div class="profile__top-left">
+					<div class="profile__top-left profile__top-left--wide">
 
-				<button class="profile__id" id="profile__id">
-					<span>
-						ID: {{ char.pk }} <!-- значение ID игрока -->
-					</span>
-					<svg class="profile__id-corner" width="97" height="24" viewBox="0 0 97 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<rect width="73" height="24" fill="var(--c30)"/><path d="M97 0L73 24V0H97Z" fill="var(--c30)"/>
-					</svg>
-					<svg class="profile__id-copyed" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="var(--c10two)">
-						<path d="M22 2v22h-20v-22h3c1.23 0 2.181-1.084 3-2h8c.82.916 1.771 2 3 2h3zm-11 1c0 .552.448 1 1 1 .553 0 1-.448 1-1s-.447-1-1-1c-.552 0-1 .448-1 1zm9 1h-4l-2 2h-3.897l-2.103-2h-4v18h16v-18zm-13 9.729l.855-.791c1 .484 1.635.852 2.76 1.654 2.113-2.399 3.511-3.616 6.106-5.231l.279.64c-2.141 1.869-3.709 3.949-5.967 7.999-1.393-1.64-2.322-2.686-4.033-4.271z"/>
-					</svg>
-				</button>
-				{% if char.image %}
-				<img src="{{ char.image.url }}" class="profile__ava" {% if char.party %}{% if char.party.members_image %}{% if party_back %}style="background-image: url({{ char.party.members_image.url }}); background-size: cover;"{% endif %}{% endif %}{% endif %}>
-				{% else %}{% nopic player 'profile__ava' %}{% endif %}
+						<button class="profile__id" id="profile__id">
+							<span>
+								ID: {{ char.pk }} <!-- значение ID игрока -->
+							</span>
+							<svg class="profile__id-corner" width="97" height="24" viewBox="0 0 97 24" fill="none"
+								xmlns="http://www.w3.org/2000/svg">
+								<rect width="73" height="24" fill="var(--c30)" />
+								<path d="M97 0L73 24V0H97Z" fill="var(--c30)" />
+							</svg>
+							<svg class="profile__id-copyed" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+								viewBox="0 0 24 24" fill="var(--c10two)">
+								<path
+									d="M22 2v22h-20v-22h3c1.23 0 2.181-1.084 3-2h8c.82.916 1.771 2 3 2h3zm-11 1c0 .552.448 1 1 1 .553 0 1-.448 1-1s-.447-1-1-1c-.552 0-1 .448-1 1zm9 1h-4l-2 2h-3.897l-2.103-2h-4v18h16v-18zm-13 9.729l.855-.791c1 .484 1.635.852 2.76 1.654 2.113-2.399 3.511-3.616 6.106-5.231l.279.64c-2.141 1.869-3.709 3.949-5.967 7.999-1.393-1.64-2.322-2.686-4.033-4.271z" />
+							</svg>
+						</button>
 
-				{% if ava_border %}
-					{% if png_use %}
-				<img src="{{ ava_border.image.url }}" class="profile__ava-border">
-					{% else %}
-				<svg class="profile__ava-border" viewBox="0 0 {% localize off %}{{ ava_border.box_x }} {{ ava_border.box_y }}{% endlocalize %}">
-					{% autoescape off %}
-					{{ ava_border.shape }}
-					{% endautoescape %}
-				</svg>
-					{% endif %}
-				{% endif %}
+						{% if char.image %}
+						<img src="{{ char.image.url }}" class="profile__ava profile__ava--wide" {% if char.party %}{% if char.party.members_image %}{% if party_back %}style="background-image: url({{ char.party.members_image.url }}); background-size: cover;"{% endif %}{% endif %}{% endif %}>
+						{% else %}{% nopic player 'profile__ava profile__ava--wide' %}{% endif %}
+						{% if ava_border %}
+							{% if png_use %}
+						<img src="{{ ava_border.image.url }}" class="profile__ava-border">
+							{% else %}
+						<svg class="profile__ava-border" viewBox="0 0 {% localize off %}{{ ava_border.box_x }} {{ ava_border.box_y }}{% endlocalize %}">
+							{% autoescape off %}
+							{{ ava_border.shape }}
+							{% endautoescape %}
+						</svg>
+							{% endif %}
+						{% endif %}
+					</div>
+				</div>
+
+				<div class="profile__gridMenu">
+					<button class="profile__gridBtn pofile__infoBtn">
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+							<path fill='var(--c10one)'
+								d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2.033 16.01c.564-1.789 1.632-3.932 1.821-4.474.273-.787-.211-1.136-1.74.209l-.34-.64c1.744-1.897 5.335-2.326 4.113.613-.763 1.835-1.309 3.074-1.621 4.03-.455 1.393.694.828 1.819-.211.153.25.203.331.356.619-2.498 2.378-5.271 2.588-4.408-.146zm4.742-8.169c-.532.453-1.32.443-1.761-.022-.441-.465-.367-1.208.164-1.661.532-.453 1.32-.442 1.761.022.439.466.367 1.209-.164 1.661z" />
+						</svg>
+						<span>{% trans 'инфо' context "profile" %}</span>
+					</button>
+
+					<a href='/view_borders/{% localize off %}{{ char.pk }}{% endlocalize %}' class="profile__gridBtn">
+						{% if ava_border %}
+							{% if png_use %}
+						<img width="40" height="40" src="{{ ava_border.image.url }}">
+							{% else %}
+						<svg width="40" height="40" viewBox="0 0 {% localize off %}{{ ava_border.box_x }} {{ ava_border.box_y }}{% endlocalize %}">
+							{% autoescape off %}
+							{{ ava_border.shape }}
+							{% endautoescape %}
+						</svg>
+							{% endif %}
+						{% else %}
+						<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<rect x="2" y="2" width="36" height="36" stroke="var(--c10one)" stroke-width="4" />
+							<rect x="5.5" y="5.5" width="29" height="29" stroke="var(--c10one)" />
+						</svg>
+						{% endif %}
+
+						<svg class='profile__outerLinkSvg' xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+							viewBox="0 0 24 24">
+							<path
+								d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"
+								fill='var(--c10one)' />
+						</svg>
+						<span>{% trans 'рамки' context "profile" %}</span>
+					</a>
+
+					<a href='/view_planes/{% localize off %}{{ char.pk }}{% endlocalize %}' class="profile__gridBtn">
+						<img src="{{ plane_url }}" alt="">
+						<svg class='profile__outerLinkSvg' xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+							viewBox="0 0 24 24">
+							<path
+								d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"
+								fill='var(--c10one)' />
+						</svg>
+						<span>{% trans 'самолёты' context "profile" %}</span>
+					</a>
+
+					<a href='##' class="profile__gridBtn profile__gridBtn--disabled">
+						<svg enable-background="new 0 0 100 100" width="24" height="24" id="Layer_1" version="1.1" viewBox="0 0 100 100" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg"><defs id="defs6"></defs>
+							<g id="g6" transform="matrix(0.57421535,0,0,0.57421535,19.16395,11.269759)" style="fill='var(--c10one)'"><path d="m 53.701193,69.176192 c -23.099862,0 -41.891895,18.792034 -41.891895,41.891898 0,23.09986 18.792033,41.8919 41.891895,41.8919 23.099861,0 41.891898,-18.79204 41.891898,-41.8919 0,-23.099864 -18.792037,-41.891898 -41.891898,-41.891898 z m 0,2.327329 c 21.816377,0 39.564549,17.748189 39.564549,39.564569 0,21.81638 -17.748172,39.56455 -39.564549,39.56455 -21.816378,0 -39.564565,-17.74817 -39.564565,-39.56455 0,-21.81638 17.748187,-39.564569 39.564565,-39.564569 z m 0,3.490986 c -19.891697,0 -36.07358,16.183057 -36.07358,36.073583 0,19.89052 16.181883,36.07361 36.07358,36.07361 19.891696,0 36.073614,-16.18309 36.073614,-36.07361 0,-10.14714 -4.310341,-19.88131 -11.827591,-26.709689 -0.236186,-0.215324 -0.602908,-0.198819 -0.820494,0.03862 -0.216414,0.238532 -0.199908,0.606259 0.03862,0.822756 7.274109,6.607274 11.445788,16.028173 11.445788,25.848303 0,19.24933 -15.660615,34.90994 -34.909941,34.90994 -19.249326,0 -34.909915,-15.66061 -34.909915,-34.90994 0,-19.249324 15.660589,-34.909913 34.909915,-34.909913 4.132133,0 8.174869,0.713586 12.018449,2.122804 0.301371,0.111684 0.637176,-0.0429 0.747771,-0.345524 0.110511,-0.302543 -0.04516,-0.634888 -0.347786,-0.745433 -3.97152,-1.455743 -8.150153,-2.195512 -12.418434,-2.195512 z m 15.743561,3.65914 c -0.225798,-0.01324 -0.4495,0.105483 -0.556828,0.322735 -0.142013,0.288635 -0.02379,0.636505 0.263668,0.779608 0.777262,0.383981 1.54623,0.799968 2.288638,1.238659 0.09308,0.05589 0.196473,0.08185 0.297768,0.08185 0.198986,0 0.391773,-0.101462 0.500021,-0.284111 0.162876,-0.276989 0.07122,-0.633657 -0.2046,-0.797789 -0.766873,-0.454946 -1.564159,-0.885009 -2.36597,-1.281808 -0.07122,-0.03494 -0.14746,-0.05471 -0.222697,-0.05916 z m 4.520554,2.770562 c -0.146622,0.02547 -0.283105,0.105987 -0.375016,0.238616 -0.184995,0.262997 -0.122073,0.626368 0.140924,0.811446 0.3875,0.272298 0.768465,0.548952 1.14323,0.83633 0.105903,0.08027 0.231159,0.120481 0.354489,0.120481 0.174606,0 0.348457,-0.07833 0.46366,-0.227305 0.194378,-0.255959 0.146956,-0.621592 -0.109087,-0.815887 -0.388673,-0.296762 -0.782624,-0.587743 -1.184116,-0.868251 -0.131457,-0.09132 -0.287462,-0.1209 -0.434084,-0.09543 z" fill="var(--c10one)" id="path386" style="display:inline;fill='var(--c10one)';fill-opacity:1;stroke-width:0.837835"></path><path d="m 83.45,94.457643 c -2.034731,4.4e-5 -3.597444,0.991766 -4.688138,2.975169 -0.272742,0.506921 -0.933483,2.347116 -1.98223,5.520588 l -1.730521,5.25613 h 5.88377 v 2.71071 h -6.764762 l -9.281882,28.16493 h -1.25856 l -5.883768,-17.38821 -7.645684,7e-5 -5.852373,17.38814 h -1.132704 l -9.59652,-28.16493 h -7.016472 v -2.71071 h 6.104013 l -2.171014,-6.34702 c -0.943928,-2.798826 -1.541742,-4.440676 -1.793446,-4.925559 -0.818069,-1.65283 -2.370294,-2.479264 -4.656674,-2.479308 v -1.223124 h 15.794928 v 1.223124 h -0.755135 c -2.286398,4.4e-5 -3.429589,0.903612 -3.429576,2.710709 -1.3e-5,0.793418 0.461459,2.567499 1.384414,5.322248 l 1.919308,5.71893 h 12.900239 l 0.660744,-1.95038 -2.265408,-6.776777 c -0.29369,-0.881492 -0.786627,-1.851176 -1.478807,-2.909055 -0.587355,-0.903526 -1.447368,-1.542636 -2.58005,-1.91733 -0.398564,-0.132186 -1.027846,-0.198301 -1.88784,-0.198345 v -1.223124 h 16.612994 v 1.223124 h -1.132703 c -2.265444,4.4e-5 -3.398146,0.980746 -3.398113,2.942112 -3.3e-5,1.101953 0.471926,3.063355 1.415879,5.884225 l 1.667595,4.92555 h 12.90024 l 1.730521,-5.25613 c 0.922889,-2.79882 1.384362,-4.694113 1.384415,-5.685876 -5.3e-5,-1.145948 -0.534943,-1.928306 -1.604666,-2.347077 -0.797136,-0.308493 -1.835449,-0.46276 -3.114936,-0.462804 V 93.234519 H 83.5045 Z M 71.485252,110.92024 H 60.346994 l 3.618409,10.77679 h 3.964403 z m -3.555446,10.77679 h -3.964403 l 2.013647,5.95027 z m -10.131371,0 -3.681314,-10.77679 h -0.314639 l -3.649757,10.77679 z m -6.888927,-10.76901 -11.07715,-0.008 5.600698,16.7271 z" style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:200px;line-height:125%;font-family:'Times New Roman';-inkscape-font-specification:'Times New Roman';text-align:center;letter-spacing:0px;word-spacing:-70px;text-anchor:middle;display:inline;fill: var(--c10one);fill-opacity:1;stroke:none;stroke-width:0.330228;stroke-dasharray:none" id="path2986"></path></g>
+							<path d="M 64.002,55.526 V 45 H 61.733 L 79.1,3 h -16 L 50,35.154 36.9,3 h -16 l 17.366,42 h -2.264 v 10.523 c 0,0 5.063896,-1.904326 7.40523,-2.491966 2.341334,-0.58764 4.315828,-1.096358 6.577414,-1.110111 2.261586,-0.01375 4.496085,0.431863 6.823593,1.021743 C 59.135745,53.532545 64.002,55.526 64.002,55.526 Z M 38.002,47 h 1.131 L 40,49 h 4 12 4 l 0.867,-2 h 1.135 v 7.229 C 58.469,52.18 54.371,51 50,51 c -4.369,0 -8.465,1.18 -11.998,3.228 z" fill="var(--c10one)" id="path5" style="fill='var(--c10one)'"></path>
+						</svg>
+						<svg class='profile__outerLinkSvg' xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+							viewBox="0 0 24 24">
+							<path
+								d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"
+								fill='var(--c10one)' />
+						</svg>
+						<span>{% trans 'награды' context "profile" %}</span>
+					</a>
+
+				</div>
 			</div>
 
-			<div class="profile__top-right">
-				<button class="profile__info ct__square-btn active"> <!-- кнопка перекл. на инфо -->
-					<svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M100 10.0711L100 95C100 97.7614 97.7614 100 95 100L5 100C2.23858 100 2.66948e-08 97.7614 5.96244e-08 95L1.13286e-06 5C1.16579e-06 2.23858 2.23858 2.66947e-08 5 5.96244e-08L89.9289 1.07239e-06C91.255 1.08821e-06 92.5268 0.52678 93.4645 1.46446L98.5355 6.53554C99.4732 7.47321 100 8.74499 100 10.0711Z" fill="url(#paint0_linear_48_141)"/>
-						<path class="profile__info-i1" d="M46.9877 45.4508L43.2377 46.8033L43.1147 47.8484C48.2787 45.9303 48.4631 49.1394 47.9098 50.9836L45.3279 60.082C43.6065 66.2295 51.8238 65.1844 56.1475 63.8935L56.3934 62.7869C51.5246 64.164 51.0041 61.5574 51.3525 60.082L53.8115 50.9836C55.6803 44.4918 50.041 44.5902 46.9877 45.4508Z" fill="var(--c10one)" stroke="var(--c10one)" stroke-width="2" stroke-linejoin="round"/>
-						<circle class="profile__info-i2" cx="50" cy="50" r="30" stroke="var(--c10one)" stroke-width="5"/>
-						<circle class="profile__info-i1" cx="53.1353" cy="37.7664" r="1.88115" fill="var(--c10one)" stroke="var(--c10one)" stroke-width="3"/>
-						<defs>
-						<linearGradient id="paint0_linear_48_141" x1="1.19249e-06" y1="0" x2="100" y2="99.9998" gradientUnits="userSpaceOnUse">
-						<stop class="profile__info-i3" stop-color="var(--c30)"/>
-						<stop class="profile__info-i4" offset="1" stop-color="var(--c30)" stop-opacity="0"/>
-						</linearGradient>
-						</defs>
+		<div class="profile__modal profile__modalInfo">
+				<button class="box__close">
+					<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M1 1L31 31M31 1L1.53571 30.4643" stroke-width="1" stroke="var(--c10one)" />
 					</svg>
 				</button>
-			</div>
-		</div>
-
-		<div class="profile__tabs-wrapper" style="height: calc(100vh - 350rem);">
-			<!-- ВКЛАДКА ИНФОРМАЦИЯ -->
-			<div class="profile__info-tab">
-
 				<div class="ct__s">
 					<h2 class="ct__s-title">{% trans 'был в сети' context "profile" %}</h2>
 					<p class="ct__s-text">
@@ -175,13 +229,18 @@
 					<p id="player_bio_view" class="ct__s-text" >{% if not char.bio %}{{ user_link }}{% else %}{{ char.bio }}{% endif %}</p>
 				</div>
 			</div>
-			<!-- конец ВКЛАДКИ ИНФОРМАЦИЯ -->
-		</div>
 
 
 	</section>
 	<script src="{% static 'redesign/js/copy_to_clip.js' %}?{{ csrf_token }}"></script>
 	<script>
+		const infoBtn = document.querySelector('.pofile__infoBtn');
+		const infoModal = document.querySelector('.profile__modalInfo');
+		const infoClose = infoModal.querySelector('.box__close');
+
+		infoBtn.addEventListener('click', () => { infoModal.classList.add('active'); });
+		infoClose.addEventListener('click', () => { infoModal.classList.remove('active'); });
+
 		if (document.getElementById('profile__id')) {
 			const buttonIdCopy = new IdCopy('{{ request.get_host }}/profile/{% localize off %}{{ char.pk }}{% endlocalize %}/');
 		}
