исправление текста в обзоре

--- a/player/templates/player/redesign/overview_skills.html
+++ b/player/templates/player/redesign/overview_skills.html
@@ -230,7 +230,7 @@
     var cnl_header = '{% trans 'Отмена изучения навыка' context "skills" %}';
     var cnl_text = '{% trans 'Изучение навыка будет отменено. Продолжить?' context "skills" %}';
     var cnl_yes = '{% trans 'Продолжить' context "skills" %}';
-    var cnl_cancel = '{% trans 'Отмена' context "skills" %}';
+    var cnl_cancel = '{% trans 'Назад' context "skills" %}';
 </script>
 <!--прем блок-->
 <div class="overview__love-prem">
