--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -287,6 +287,16 @@
 				</div>
 
 				<div class="ct__s">
+					<h2 class="ct__s-title">{% trans 'суммарный урон' context "profile" %}</h2>
+					<p class="ct__s-text">
+						{{ dmg_sum }}
+						<a href="/character_wars/{% localize off %}{{ player.pk }}{% endlocalize %}/">
+							{% trans '(к войнам)' context "profile" %}
+						</a>
+					</p>
+				</div>
+
+				<div class="ct__s">
 					<h2 class="ct__s-title">{% trans 'характеристики' context "profile" %}</h2>
 					<p class="ct__s-text">
 						<font color="FF0000">{{ player.power }}</font>
