рейтинг по урону

--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -293,6 +293,9 @@
 						<a href="/character_wars/{% localize off %}{{ player.pk }}{% endlocalize %}/">
 							{% trans '(к войнам)' context "profile" %}
 						</a>
+						<a href="/damage_top/">
+							{% trans '(к рейтингу)' context "profile" %}
+						</a>
 					</p>
 				</div>
 
