--- a/player/templates/player/redesign/lists/universal_list.html
+++ b/player/templates/player/redesign/lists/universal_list.html
@@ -143,7 +143,7 @@
 							{% endfor %}
 
 						{% else %}
-						  <td class="j-t-{{ col }}" style="cursor: pointer" onclick="window.open('/{% if line|get_class_name == 'Player' or line|get_class_name == 'PlayerWithTop' or line|get_class_name == '_PlayerWithTop' or line|get_class_name == 'PlayerWithCash' or line|get_class_name == 'PPlayerWithTop' or line|get_class_name == 'KPlayerWithTop' or line|get_class_name == 'EPlayerWithTop' %}profile{% elif line|get_class_name == 'PartyWithSize' %}party{% elif line|get_class_name == 'RegionWithPop' %}region{% else %}{{ line|get_class_name|lower }}{% endif %}/{% localize off %}{{ line.pk }}{% endlocalize %}/')">
+						  <td class="j-t-{{ col }}" style="cursor: pointer" onclick="window.open('/{% if line|get_class_name == 'Player' or line|get_class_name == 'PlayerWithDmg' or line|get_class_name == 'PlayerWithTop' or line|get_class_name == '_PlayerWithTop' or line|get_class_name == 'PlayerWithCash' or line|get_class_name == 'PPlayerWithTop' or line|get_class_name == 'KPlayerWithTop' or line|get_class_name == 'EPlayerWithTop' %}profile{% elif line|get_class_name == 'PartyWithSize' %}party{% elif line|get_class_name == 'RegionWithPop' %}region{% else %}{{ line|get_class_name|lower }}{% endif %}/{% localize off %}{{ line.pk }}{% endlocalize %}/')">
 						  <!--картинка рега-->
 						  {% if col == 'on_map_id' %}
 								<img src="/static/img/regions/{{ line.on_map_id }}.png" alt="{{ col }}">
@@ -153,7 +153,7 @@
 								{% if obj_img %}
 								<img src="{{ obj_img|get_attr:'url' }}" alt="{{ col }}">
 								{% else %}
-								  {% if line|get_class_name == 'Player' or line|get_class_name == 'PlayerWithTop' or line|get_class_name == '_PlayerWithTop' or line|get_class_name == 'PlayerWithCash' or line|get_class_name == 'PPlayerWithTop' or line|get_class_name == 'KPlayerWithTop' or line|get_class_name == 'EPlayerWithTop' %}
+								  {% if line|get_class_name == 'Player' or line|get_class_name == 'PlayerWithDmg' or line|get_class_name == 'PlayerWithTop' or line|get_class_name == '_PlayerWithTop' or line|get_class_name == 'PlayerWithCash' or line|get_class_name == 'PPlayerWithTop' or line|get_class_name == 'KPlayerWithTop' or line|get_class_name == 'EPlayerWithTop' %}
 							  		<!--нет картинки: игрок-->
 							  		{% nopic_list player '' %}
 								  {% elif line|get_class_name == 'PartyWithSize' %}
