иконки боя в списке

--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -9782,6 +9782,18 @@ p.overview__love-stat-timer {
 	}
 }
 
+.ct__war_list {
+    max-width: 13rem;
+    align-content: center;
+}
+
+@media (max-width: 1000px) {
+	.ct__war_list {
+    max-width: 37rem;
+    align-content: center;
+	}
+}
+
 /*! ----- ct__decor-border ----- */
 
 .ct__decor-border {
