--- a/war/templates/war/redesign/character_wars.html
+++ b/war/templates/war/redesign/character_wars.html
@@ -7,7 +7,7 @@
 {% load get_attr %}
 {% load get_str %}
 {% load redesign.template_svg.nopic %}
-
+{% load template_svg.war_icon %}
 
 {% block content %}
   <section class="articles custom-scroll">
@@ -48,19 +48,16 @@
                 </div>
             </td>
 
-            <td></td><!--если это вложенный словарь-->
+            <td class="ct__war_list">
+                {% war_icon player war_elem|dict_key:'war'|get_class_name '' 'margin-right: initial; position: initial' %}
+            </td>
 
             <td class="j-t-nickname" style="cursor: pointer" onclick="{% localize off %}window.open('/war/{{ war_elem|dict_key:'war'|get_class_name }}/{{ war_elem|dict_key:'war'|get_attr:'pk' }}/'){% endlocalize %}">
                 <div class="overview__war-wrapper">
                     <span class="overview__war-string">
                         <p class="overview__war-text">
                             {% if war_elem|dict_key:'war'|get_class_name == 'Revolution' %}
-                            <svg class="" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg" >
-<path d="M13.8682 17.63L13.4206 16.8548L12.1252 17.7011L12.5626 21.337L12.2144 21.5381C11.6193 21.862 11.3449 21.5561 11.2821 21.3626L10.8439 19.3761L10.5771 19.2102L10.274 18.7699L4.99878 24.7442L3.1083 22.3164L6.60396 19.609L7.41768 19.41L9.39333 17.7525L9.63457 16.6042L15.5914 13.165L15.3783 12.7958L17.0645 11.8223L17.1924 12.0438L17.3757 11.9379L17.3011 11.8087L20.2533 10.2766L20.5218 10.3184L22.7213 9.04855C23.2591 9.50592 23.8161 9.3927 24.0273 9.27892L25.7136 8.30537L25.4975 6.83047L25.919 6.58708L26.6117 7.78685L27.1249 7.49055L27.7779 7.60574L21.2346 11.3835L21.4903 11.8265L15.7134 15.408C17.1173 17.1963 19.1827 17.6216 20.0399 17.6107L19.9594 19.503C17.1768 19.5935 14.9974 17.6671 14.2556 16.6926L14.0173 16.8302L14.3264 17.3655L13.8682 17.63ZM13.8682 17.63C13.8731 17.7092 13.8418 17.9061 13.6768 18.0604L12.7603 18.5895M12.3451 17.5741C12.4415 17.7974 12.7417 18.2016 13.1717 18.0321" stroke="var(--c10one)" stroke-width="0.5" stroke-linejoin="bevel"></path>
-<path d="M20.1318 17.5932L20.5794 16.818L21.8748 17.6643L21.4374 21.3002L21.7856 21.5013C22.3807 21.8252 22.6551 21.5192 22.7179 21.3258L23.1561 19.3393L23.4229 19.1734L23.726 18.7331L29.0012 24.7074L30.8917 22.2796L27.396 19.5722L26.5823 19.3732L24.6067 17.7157L24.3654 16.5674L18.8729 13.3962M20.1318 17.5932C20.1269 17.6724 20.1582 17.8693 20.3232 18.0236L21.2397 18.5527M20.1318 17.5932L19.6736 17.3287L19.9827 16.7934L19.7444 16.6558C19.5643 16.8924 19.2994 17.1852 18.9617 17.4915M21.6549 17.5373C21.5585 17.7606 21.2583 18.1648 20.8283 17.9953M16.6243 11.9011L16.6989 11.7719L13.7467 10.2398L13.4782 10.2816L11.2787 9.01174C10.7409 9.46911 10.1839 9.3559 9.97265 9.24212L8.28641 8.26857L8.50255 6.79366L8.08099 6.55028L7.3883 7.75004L6.8751 7.45374L6.22207 7.56893L12.7654 11.3467L12.5097 11.7897L15 13.5M15 17.4426C14.579 17.5416 14.2158 17.5771 13.9601 17.5739L14.0406 19.4662C15.1106 19.501 16.0913 19.2376 16.9355 18.8448M17.0013 16.5674C17.4541 16.2609 17.896 15.8688 18.2866 15.3712L17.0013 14.5743" stroke="var(--c10one)" stroke-width="0.5" stroke-linejoin="bevel"></path>
-<circle cx="17" cy="17" r="16.5" stroke="var(--c10two)"></circle>
-<path d="M17 22L18.1226 25.4549H21.7553L18.8164 27.5902L19.9389 31.0451L17 28.9098L14.0611 31.0451L15.1836 27.5902L12.2447 25.4549H15.8774L17 22Z" fill="var(--c10one)"></path>
-</svg>
+                            {% war_icon player war_elem|dict_key:'war'|get_class_name '' 'position: initial' %}
                             <span {% if war_elem|dict_key:'side' == 'agr' %}style="color: var(--c10two);"{% endif %}>Силы восстания</span>
                             {% else %}
                             <img src="/static/img/regions/{{ war_elem|dict_key:'war'|get_attr:'agr_region'|get_attr:'on_map_id' }}.png">
