--- a/player/templates/player/index.html
+++ b/player/templates/player/index.html
@@ -254,17 +254,17 @@
       </p>
 
       <div class="modal__btn-wrapper">
-<!--        <button class="modal__ok">-->
-<!--          <svg width="144" height="30" viewBox="0 0 144 30" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-<!--            <mask id="mask0_259_325" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">-->
-<!--            <path d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z" fill="var(&#45;&#45;c10two)"></path>-->
-<!--            </mask>-->
-<!--            <g mask="url(#mask0_259_325)">-->
-<!--            <path d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z" fill="var(&#45;&#45;c10one)"></path>-->
-<!--            </g>-->
-<!--          </svg>-->
-<!--          <span>ok</span>-->
-<!--        </button>-->
+        <button class="modal__ok">
+          <svg width="144" height="30" viewBox="0 0 144 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <mask id="mask0_259_325" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">
+            <path d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z" fill="var(--c10two)"></path>
+            </mask>
+            <g mask="url(#mask0_259_325)">
+            <path d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z" fill="var(--c10one)"></path>
+            </g>
+          </svg>
+          <span>скрыть</span>
+        </button>
         <button class="modal__cancel ct__mid-btn">
           <svg width="144" height="30" viewBox="0 0 144 30" fill="none" xmlns="http://www.w3.org/2000/svg">
             <mask id="mask0_259_317" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">
